# Reimagined-octo-spork

./: .gitignore  .travis.yml  CMakeLists.txt  CNode_8h_source.html  Instruction_8h_source.html  Logger.cpp  Logger.h  Logger_8h_source.html  Planimetry_8h_source.html  README.md  SNode_8h_source.html  Tracker_8h_source.html  annotated.html  bkgSubtraction_8h_source.html  build_opencv.sh  classCNode-members.html  classCNode.html  classInstruction-members.html  classInstruction.html  classLogger-members.html  classLogger.html  classPlanimetry-members.html  classPlanimetry.html  classSNode-members.html  classSNode.html  classTracker-members.html  classTracker.html  classbkgSubtraction-members.html  classbkgSubtraction.html  classes.html  dir_0d8c7c1a299c43ea234902080104adc1.html  dir_18270c6d2c5d67ba6c7b5c4af262ba73.html  dir_2b7427ba9098f970482bbc70a3c98640.html  dir_49999b7732e50ae52750c597186b860a.html  dir_4ba48873c8126cf87032b4ad7aed0991.html  dir_652862af00b3ad57a465f0b33c090aa8.html  dir_b5b116ec0d93d2c11ea81c2de4b54d61.html  dir_fcb7b318b165d0942847109e6a34e254.html  dir_fe055263e20ec18a35efcf808059822b.html  doxyConfig  (+14 more)
Client/: CNode.cpp  CNode.h  main.cpp  main.h
Client/Executables/: ChildExample3  bkgSubtraction  bkgndSubtraction.cpp  executables.txt  main.cpp  nodeTracker  nodeTracker.cpp
Client/Executables/resources/: client.cfg  curr_frame.txt
Client/Executables/resources/cam2/: rename.py
Executables/: ChildExample  ChildExample2  ChildExample3  bkgSubtraction  bkgndSubtraction  bkgndSubtraction.cpp  executables.txt  main.cpp  nodeTracker.cpp
Server/: DarknetCalculator.cpp  DarknetCalculator.h  Logger.cpp  Logger.h  Planimetry.cpp  Planimetry.h  SNode.cpp  SNode.h  darknet.c  darknet.h  main.cpp
Server/Instructions/: Instruction.cpp  Instruction.h  Tracker.cpp  Tracker.h  bkgSubtraction.cpp  bkgSubtraction.h
Server/darknet/: darknet
Server/darknet/cfg/: yolov2.cfg  yolov3.cfg
Server/darknet/src/: compare.c  parser.c
Server/darknetCPP/: DarknetCalculator.cpp  DarknetCalculator.h  darknet.c  darknet.h
html/: CNode_8h_source.html  Instruction_8h_source.html  Logger_8h_source.html  Planimetry_8h_source.html  SNode_8h_source.html  Tracker_8h_source.html  annotated.html  bkgSubtraction_8h_source.html  classCNode-members.html  classCNode.html  classInstruction-members.html  classInstruction.html  classLogger-members.html  classLogger.html  classPlanimetry-members.html  classPlanimetry.html  classSNode-members.html  classSNode.html  classTracker-members.html  classTracker.html  classbkgSubtraction-members.html  classbkgSubtraction.html  classes.html  dir_0320f0ac1ce05c358328a7cf94913e85.html  dir_1a445cb237d74f7a5f8d11ec3b0585cc.html  dir_51b621a7bec00c0475de8d1d96ebd6d2.html  dir_5570f6031457b1628ba6958e68ffb673.html  dir_922c588100a187620fdc1533bc178f73.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_d5fed933bcead01eeba5e47c6e3fe141.html  dir_ea1350fd400a009996d4ff1fc25c19f4.html  dir_f89abcb304c928c7d889aa5625570de5.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js  structNODE-members.html  (+7 more)
html/search/: all_1.js  all_5.js  all_6.js  all_7.js  all_a.js  all_e.js  classes_1.js  classes_6.js  functions_0.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  searchdata.js  variables_2.js
search/: all_2.js  all_4.js  all_5.js  all_8.js  all_b.js  all_c.js  all_d.js  all_f.js  classes_2.js  classes_7.js  functions_1.js  functions_2.js  functions_4.js  functions_6.js  functions_8.js  search.js  variables_0.js  variables_1.js  variables_3.js
